fixed z-index for menu

--- a/components/Layout/Header/Header.scss
+++ b/components/Layout/Header/Header.scss
@@ -288,7 +288,7 @@
   top: 50px;
   left: 0;
   background: $colorBackground;
-  z-index: 9;
+  z-index: 99999999;
 
   @media screen and (min-width: 768px) {
     top: 80px;
